Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.15
-
Fix Version/s: 5.15.0 Alpha
-
Component/s: QML: Declarative and Javascript Engine
-
Labels:
-
Environment:Ubuntu 18.04
-
Commits:172d12c7a6daa036f477f0a76c787a0f76ac21b5 (qt/qtdeclarative/5.15)
Description
The following code will produce errors unless QtQml is imported first:
import QtQml.Models 2.14 import QtQuick 2.14 import QtQuick.Window 2.14 Window { width: 640 height: 480 visible: true ObjectModel { id: itemModel Rectangle { height: 30; width: 80; color: "red" } Rectangle { height: 30; width: 80; color: "green" } Rectangle { height: 30; width: 80; color: "blue" } } ListView { anchors.fill: parent model: itemModel } }
QQmlApplicationEngine failed to load component qrc:/main.qml:1:1: plugin cannot be loaded for module "QtQml.Models": Cannot protect module QtQml.Models 2 as it was never registered