src/imports/workerscript/plugin.cpp
@@ -37,11 +37,16 @@
 **
 ****************************************************************************/
 
-#include <QtQmlWorkerScript/private/qqmlworkerscriptmodule_p.h>
+#include <QtQmlWorkerScript/private/qquickworkerscript_p.h>
+
 #include <QtQml/qqmlextensionplugin.h>
 #include <QtQml/qqml.h>
 
+#include <QtCore/qloggingcategory.h>
+
 QT_BEGIN_NAMESPACE
+
+Q_LOGGING_CATEGORY(workerScriptPlugin, "qt.workerScriptPlugin")
 
 /*!
     \qmlmodule QtQml.WorkerScript 2.\QtMinorVersion
@@ -64,7 +69,16 @@ class QtQmlWorkerScriptPlugin : public QQmlEngineExtensionPlugin
     Q_OBJECT
     Q_PLUGIN_METADATA(IID QQmlEngineExtensionInterface_iid)
 public:
-    QtQmlWorkerScriptPlugin(QObject *parent = nullptr) : QQmlEngineExtensionPlugin(parent) { }
+    QtQmlWorkerScriptPlugin(QObject *parent = nullptr) : QQmlEngineExtensionPlugin(parent)
+    {
+        if (workerScriptPlugin().isDebugEnabled()) {
+            // Superficial debug message that causes the dependency between QtQmlWorkerScript
+            // and the workerscript plugin to be retained.
+            // As qCDebug() can be a noop, retrieve the className in a separate step.
+            const QString className = QQuickWorkerScript::staticMetaObject.className();
+            qCDebug(workerScriptPlugin) << "Loading WorkerScript plugin:" << className;
+        }
+    }
 };
 
 QT_END_NAMESPACE
